--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Form Constructor</title>
-  <script defer src="/./main.bundle.js"></script></head>
+  <script defer src="./main.bundle.js"></script></head>
   <body>
     <div id="root"></div>
   </body>
