--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <title>Form Constructor</title>
-  <script defer src="./main.bundle.js"></script></head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"/><title>Form Constructor</title><script defer="defer" src="./main.bundle.js"></script></head><body><div id="root"></div></body></html>
