фавиконка перемещена туда где и должна быть

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Form Constructor</title>
+    <link rel="icon" href="/assets/icon.svg" type="image/svg+xml">
   </head>
   <body>
     <div id="root"></div>
