--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="ru"><head><meta charset="utf-8"/><title>Form Constructor</title><script defer="defer" src="./main.bundle.js"></script></head><body><div id="root"></div><script src="./assets/jszip.min.js"></script></body></html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"/><title>Form Constructor</title><link rel="icon" href="/assets/icon.svg" type="image/svg+xml"><script defer="defer" src="./main.bundle.js"></script></head><body><div id="root"></div><script src="./assets/jszip.min.js"></script></body></html>
